tests/baselines/reference/parserComputedPropertyName21.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName21.ts(2,5): error TS1169: Computed property names are not allowed in interfaces.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName21.ts (1 errors) ====
    interface I {
        [e]: number 
        ~~~
!!! error TS1169: Computed property names are not allowed in interfaces.
    }